[package]
name = "robespierre"
version = "0.0.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.4.16", features = ["derive"] }
glob = "0.3.1"
regex = "1.8.4"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
swc = "0.263.1"
swc_common = "0.31.12"
swc_ecma_ast = "0.106.0"
swc_ecma_parser = "0.136.0"
