[package]
name = "robespierre"
version = "1.0.0-beta.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0.79"
clap = { version = "4.4.16", features = ["derive"] }
glob = "~0.3.1"
regex = "^1.10.2"
serde = { version = "^1.0.195", features = ["derive"] }
serde_json = "^1.0.111"
swc = "~0.270.21"
swc_common = "~0.33.12"
swc_ecma_ast = "~0.110.17"
swc_ecma_parser = "~0.141.37"
