[package]
name = "robespierre"
version = "1.0.0-beta.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0.79"
clap = { version = "^4.4.18", features = ["derive"] }
env_logger = "~0.11.0"
glob = "~0.3.1"
log = "~0.4.20"
regex = "^1.10.3"
serde = { version = "^1.0.195", features = ["derive"] }
serde_json = "^1.0.111"
swc = "~0.272.0"
swc_common = "~0.33.15"
swc_ecma_ast = "~0.111.1"
swc_ecma_parser = "~0.142.1"
